[gd_scene load_steps=26 format=4 uid="uid://byo1oohh1d26d"]

[ext_resource type="Script" uid="uid://edfs3u55qufh" path="res://scene/forest.gd" id="1_boiax"]
[ext_resource type="PackedScene" uid="uid://b4uyanguafauh" path="res://entities/player.tscn" id="1_e2knd"]
[ext_resource type="TileSet" uid="uid://ci6yocecub5y3" path="res://tiles/terrain.tres" id="2_2xpkg"]
[ext_resource type="Texture2D" uid="uid://dy5vygtus60gg" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/6 - Distant_trees.png" id="3_gbfvw"]
[ext_resource type="Texture2D" uid="uid://b4rwuf8uohjsb" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Terrain (16 x 16).png" id="3_jxvlp"]
[ext_resource type="TileSet" uid="uid://ckf2afy4m5an6" path="res://tiles/decoration.tres" id="4_gwku7"]
[ext_resource type="Texture2D" uid="uid://csvua1ns62b6r" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/5 - Tree_row_BG_2.png" id="4_qxlj4"]
[ext_resource type="TileSet" uid="uid://bhgs11iq00pfq" path="res://tiles/lava.tres" id="5_ja8kk"]
[ext_resource type="Texture2D" uid="uid://cl7kan1wns2ye" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/4 - Tree_row_BG_1.png" id="5_jo4av"]
[ext_resource type="Texture2D" uid="uid://bqoauu1hkkbiv" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/3 - Bottom_leaf_piles.png" id="6_jxvlp"]
[ext_resource type="Texture2D" uid="uid://48lr4v8vyi2n" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/2 - Trees.png" id="7_gwku7"]
[ext_resource type="Texture2D" uid="uid://itttp321tjbb" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/Background parts/1 - Leaf_top.png" id="8_64es3"]
[ext_resource type="PackedScene" uid="uid://cdtr6sp6pckop" path="res://entities/camera.tscn" id="9_jo4av"]
[ext_resource type="PackedScene" uid="uid://nm82sifvd23i" path="res://entities/level_end.tscn" id="12_64es3"]
[ext_resource type="Texture2D" uid="uid://dkqddwf7teqa2" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/6 - Distant_trees.PNG" id="13_cvgm6"]
[ext_resource type="PackedScene" uid="uid://bes2p46skt65p" path="res://entities/skeleton.tscn" id="13_kmspj"]
[ext_resource type="Texture2D" uid="uid://cof722htmx47e" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/5 - Tree_row_BG_2.PNG" id="14_kuygm"]
[ext_resource type="Texture2D" uid="uid://kictp40681q" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/4 - Tree_row_BG_1.PNG" id="15_xw4on"]
[ext_resource type="Texture2D" uid="uid://bcghisbmlbhwb" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/3 - Bottom_leaf_piles.PNG" id="16_bqdkd"]
[ext_resource type="Texture2D" uid="uid://ci74tpo8khn0b" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/2 - Trees.PNG" id="17_un5na"]
[ext_resource type="Texture2D" uid="uid://bdt25dxh1is4o" path="res://sprites/Seasonal Tilesets/2 - Autumn Forest/crepy/1 - Leaf_top.PNG" id="18_7mab7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gwku7"]
texture = ExtResource("3_jxvlp")
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
11:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
11:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
15:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
11:4/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
11:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
4:8/0 = 0

[sub_resource type="TileSet" id="TileSet_64es3"]
sources/0 = SubResource("TileSetAtlasSource_gwku7")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ja8kk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmspj"]
size = Vector2(20, 180)

[node name="Forest" type="Node2D"]
script = ExtResource("1_boiax")
metadata/_edit_vertical_guides_ = [620.0]

[node name="Player" parent="." instance=ExtResource("1_e2knd")]
position = Vector2(11, 180)

[node name="TileMapNormal" type="Node2D" parent="."]

[node name="Terrainormal" type="TileMapLayer" parent="TileMapNormal"]
light_mask = 2
visibility_layer = 2
tile_map_data = PackedByteArray("AAAAAAwAAQACAAMAAAABAAwAAQACAAMAAAACAAwAAQACAAMAAAADAAwAAQACAAMAAAAEAAwAAQACAAMAAAAFAAwAAQACAAMAAAAHAAwAAQAEAAMAAAAIAAwAAQAEAAMAAAAJAAwAAQAEAAMAAAAKAAwAAQAEAAMAAAARAAwAAQADAAUAAAASAAwAAQAEAAQAAAATAAwAAQAEAAQAAAAUAAwAAQAEAAQAAAAVAAwAAQAEAAQAAAAWAAwAAQAEAAQAAAAXAAwAAQAEAAQAAAAYAAwAAQAEAAQAAAAeAAwAAQACAAMAAAAfAAwAAQACAAMAAAAgAAwAAQACAAMAAAAhAAwAAQACAAMAAAAiAAwAAQACAAMAAAAjAAwAAQACAAMAAAAkAAwAAQACAAMAAAAlAAwAAQACAAMAAAAmAAwAAQACAAMAAAAnAAwAAQACAAMAAAAoAAwAAQACAAMAAAApAAwAAQACAAMAAAAqAAwAAQACAAMAAAArAAwAAQACAAMAAAAsAAwAAQACAAMAAAAtAAwAAQACAAMAAAAuAAwAAQACAAMAAAAvAAwAAQACAAMAAAAwAAwAAQACAAMAAAAxAAwAAQACAAMAAAAyAAwAAQACAAMAAAAzAAwAAQACAAMAAAA0AAwAAQACAAMAAAA1AAwAAQACAAMAAAA2AAwAAQACAAMAAAA3AAwAAQACAAMAAAA4AAwAAQACAAMAAAA5AAwAAQACAAMAAAA6AAwAAQACAAMAAAA7AAwAAQACAAMAAAA8AAwAAQACAAMAAAA9AAwAAQACAAMAAAA+AAwAAQACAAMAAAA/AAwAAQACAAMAAABAAAwAAQACAAMAAABBAAwAAQACAAMAAABCAAwAAQACAAMAAABDAAwAAQACAAMAAABEAAwAAQACAAMAAABFAAwAAQACAAMAAABGAAwAAQACAAMAAABHAAwAAQACAAMAAABIAAwAAQACAAMAAABJAAwAAQACAAMAAABKAAwAAQACAAMAAABLAAwAAQACAAMAAABMAAwAAQACAAMAAABNAAwAAQACAAMAAABOAAwAAQACAAMAAABPAAwAAQACAAMAAABQAAwAAQACAAMAAABRAAwAAQACAAMAAABSAAwAAQACAAMAAABTAAwAAQACAAMAAABUAAwAAQACAAMAAABVAAwAAQACAAMAAABWAAwAAQACAAMAAABXAAwAAQACAAMAAABYAAwAAQACAAMAAABZAAwAAQACAAMAAABaAAwAAQACAAMAAABbAAwAAQACAAMAAABcAAwAAQACAAMAAAAGAAwAAQAEAAMAAAADAAsAAQAEAAMAAAADAAoAAQAEAAMAAAADAAkAAQAEAAMAAAADAAgAAQAEAAMAAAADAAcAAQAEAAMAAAADAAYAAQAEAAMAAAACAAYAAQAEAAMAAAABAAYAAQAEAAMAAAAAAAYAAQAEAAMAAAAAAAcAAQAEAAMAAAABAAcAAQAEAAMAAAACAAcAAQAEAAMAAAACAAgAAQAEAAMAAAABAAgAAQAEAAMAAAAAAAgAAQAEAAMAAAAJAAsAAQAEAAMAAAAIAAsAAQAEAAMAAAAHAAsAAQAEAAMAAAAGAAsAAQAEAAMAAAAKAAsAAQAEAAMAAAARAAsAAQAEAAMAAAASAAsAAQAEAAMAAAAUAAsAAQAEAAMAAAATAAsAAQAEAAMAAAAVAAsAAQAEAAMAAAAWAAsAAQAEAAMAAAAYAAsAAQAEAAMAAAAXAAsAAQAEAAMAAAD//wkAAQAEAAMAAAD//woAAQAEAAMAAAD//wsAAQAEAAMAAAAWAAkAAQAEAAMAAAAWAAgAAQAEAAMAAAAWAAcAAQAEAAMAAAAWAAYAAQAEAAMAAAAWAAUAAQAEAAMAAAAGAAoAAQADAAEAAAAHAAoAAQAEAAEAAAAIAAoAAQAEAAEAAAAJAAoAAQAEAAEAAAAKAAoAAQAFAAEAAAAPAAoAAQADAAEAAAAdAAwAAQADAAEAAAAYAAoAAQAFAAEAAAAVAAoAAQAFAAEAAAAQAAoAAQAEAAEAAAARAAoAAQAEAAEAAAASAAoAAQAEAAEAAAATAAoAAQAEAAEAAAAUAAoAAQAEAAEAAAAWAAoAAQAEAAEAAAAXAAoAAQAEAAEAAAAcAAwAAQAEAAEAAAAbAAwAAQAEAAEAAAAaAAwAAQAEAAEAAAAZAAwAAQAEAAEAAAA=")
tile_set = ExtResource("2_2xpkg")

[node name="FakeTerrain" type="TileMapLayer" parent="TileMapNormal"]
z_index = 2
tile_set = SubResource("TileSet_64es3")

[node name="Decoration" type="TileMapLayer" parent="TileMapNormal"]
tile_map_data = PackedByteArray("AAAlAAsAAAADAAUAAAA=")
tile_set = ExtResource("4_gwku7")

[node name="Lava" type="TileMapLayer" parent="TileMapNormal" groups=["LethalArea"]]
z_index = 2
tile_map_data = PackedByteArray("AAAKAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAsAAAAAAAAAAAAQAAsAAAAAAAAAAAARAAsAAAAAAAAAAAAKAAwAAAAAAAEAAAALAAwAAAAAAAEAAAAMAAwAAAAAAAEAAAANAAwAAAAAAAEAAAAOAAwAAAAAAAEAAAAPAAwAAAAAAAEAAAAQAAwAAAAAAAEAAAARAAwAAAAAAAEAAAA=")
tile_set = ExtResource("5_ja8kk")

[node name="TileMapCorrompido" type="Node2D" parent="."]

[node name="Terraincorruptd" type="TileMapLayer" parent="TileMapCorrompido"]
z_index = 5
tile_map_data = PackedByteArray("AAAAAAwAAQACAAMAAAABAAwAAQACAAMAAAACAAwAAQACAAMAAAADAAwAAQACAAMAAAAEAAwAAQACAAMAAAAFAAwAAQACAAMAAAAGAAwAAQADAAMAAAAHAAwAAQAEAAQAAAAIAAwAAQAEAAQAAAAJAAwAAQAEAAQAAAAKAAwAAQAFAAUAAAAXAAwAAQAEAAMAAAAoAAwAAQACAAMAAAApAAwAAQACAAMAAAAqAAwAAQACAAMAAAArAAwAAQACAAMAAAAsAAwAAQACAAMAAAAtAAwAAQACAAMAAAAuAAwAAQACAAMAAAAvAAwAAQACAAMAAAAwAAwAAQACAAMAAAAxAAwAAQACAAMAAAAyAAwAAQACAAMAAAAzAAwAAQACAAMAAAA0AAwAAQACAAMAAAA1AAwAAQACAAMAAAA2AAwAAQACAAMAAAA3AAwAAQACAAMAAAA4AAwAAQACAAMAAAA5AAwAAQACAAMAAAA6AAwAAQACAAMAAAA7AAwAAQACAAMAAAA8AAwAAQACAAMAAAA9AAwAAQACAAMAAAA+AAwAAQACAAMAAAA/AAwAAQACAAMAAABAAAwAAQACAAMAAABBAAwAAQACAAMAAABCAAwAAQACAAMAAABDAAwAAQACAAMAAABEAAwAAQACAAMAAABFAAwAAQACAAMAAABGAAwAAQACAAMAAABHAAwAAQACAAMAAABIAAwAAQACAAMAAABJAAwAAQACAAMAAABKAAwAAQACAAMAAABLAAwAAQACAAMAAABMAAwAAQACAAMAAABNAAwAAQACAAMAAABOAAwAAQACAAMAAABPAAwAAQACAAMAAABQAAwAAQACAAMAAABRAAwAAQACAAMAAABSAAwAAQACAAMAAABTAAwAAQACAAMAAABUAAwAAQACAAMAAABVAAwAAQACAAMAAABWAAwAAQACAAMAAABXAAwAAQACAAMAAABYAAwAAQACAAMAAABZAAwAAQACAAMAAABaAAwAAQACAAMAAABbAAwAAQACAAMAAABcAAwAAQACAAMAAAAWAAoAAQAEAAMAAAAKAAsAAQAFAAUAAAAGAAsAAQADAAUAAAAHAAsAAQAEAAQAAAAIAAsAAQAEAAQAAAAJAAsAAQAEAAQAAAARAAoAAQAEAAMAAAARAAsAAQAEAAMAAAARAAwAAQAEAAMAAAASAAwAAQAEAAMAAAASAAsAAQAEAAMAAAASAAoAAQAEAAMAAAATAAoAAQAEAAMAAAATAAsAAQAEAAMAAAATAAwAAQAEAAMAAAAUAAwAAQAEAAMAAAAUAAsAAQAEAAMAAAAVAAoAAQAEAAMAAAAUAAoAAQAEAAMAAAAWAAkAAQAEAAMAAAAYAAoAAQAEAAMAAAAYAAsAAQAEAAMAAAAXAAoAAQAEAAMAAAAWAAsAAQAEAAMAAAAVAAsAAQAEAAMAAAAVAAwAAQAEAAMAAAAWAAwAAQAEAAMAAAAYAAwAAQAEAAMAAAAZAAwAAQAEAAMAAAAaAAwAAQAEAAMAAAAbAAwAAQAEAAMAAAAcAAwAAQAEAAMAAAAdAAwAAQAEAAMAAAD//wkAAQAEAAMAAAD//woAAQAEAAMAAAD//wsAAQAEAAMAAAAQAAoAAQAEAAMAAAAPAAoAAQAEAAMAAAAQAAkAAQAEAAMAAAAQAAgAAQAEAAMAAAAQAAcAAQAEAAMAAAAQAAYAAQAEAAMAAAAQAAUAAQAEAAMAAAAnAAwAAQAEAAMAAAAmAAwAAQAEAAMAAAAlAAwAAQAEAAMAAAAkAAwAAQAEAAMAAAAjAAwAAQAEAAMAAAAiAAwAAQAEAAMAAAAhAAwAAQAEAAMAAAAgAAwAAQAEAAMAAAAfAAwAAQAEAAMAAAAeAAwAAQAEAAMAAAAXAAsAAQAEAAMAAAAKAAoAAQAEAAMAAAAJAAoAAQAEAAMAAAAIAAoAAQAEAAMAAAAHAAoAAQAEAAMAAAAGAAoAAQAEAAMAAAA=")
tile_set = ExtResource("2_2xpkg")

[node name="FakeTerrain" type="TileMapLayer" parent="TileMapCorrompido"]
z_index = 2
tile_set = SubResource("TileSet_64es3")

[node name="Decoration" type="TileMapLayer" parent="TileMapCorrompido"]
tile_map_data = PackedByteArray("AAAlAAsAAAADAAUAAAA=")
tile_set = ExtResource("4_gwku7")

[node name="Lava" type="TileMapLayer" parent="TileMapCorrompido" groups=["LethalArea"]]
z_index = 2
tile_map_data = PackedByteArray("AAAKAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAsAAAAAAAAAAAAQAAsAAAAAAAAAAAARAAsAAAAAAAAAAAAKAAwAAAAAAAEAAAALAAwAAAAAAAEAAAAMAAwAAAAAAAEAAAANAAwAAAAAAAEAAAAOAAwAAAAAAAEAAAAPAAwAAAAAAAEAAAAQAAwAAAAAAAEAAAARAAwAAAAAAAEAAAA=")
tile_set = ExtResource("5_ja8kk")

[node name="ParallaxBackgroundNormal" type="ParallaxBackground" parent="."]
layer = -77

[node name="6" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/6"]
texture_repeat = 2
texture = ExtResource("3_gbfvw")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="5" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/5"]
texture_repeat = 2
texture = ExtResource("4_qxlj4")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="4" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/4"]
texture_repeat = 2
texture = ExtResource("5_jo4av")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="3" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/3"]
texture_repeat = 2
texture = ExtResource("6_jxvlp")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="2" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/2"]
texture_repeat = 2
texture = ExtResource("7_gwku7")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="1" type="ParallaxLayer" parent="ParallaxBackgroundNormal"]
motion_scale = Vector2(1.2, 1.2)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundNormal/1"]
texture_repeat = 2
texture = ExtResource("8_64es3")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="ParallaxBackgroundCorrompido" type="ParallaxBackground" parent="."]
layer = -99

[node name="6" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/6"]
texture_repeat = 2
material = SubResource("CanvasItemMaterial_ja8kk")
texture = ExtResource("13_cvgm6")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="5" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/5"]
texture_repeat = 2
texture = ExtResource("14_kuygm")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="4" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/4"]
texture_repeat = 2
texture = ExtResource("15_xw4on")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="3" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/3"]
texture_repeat = 2
texture = ExtResource("16_bqdkd")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="2" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/2"]
texture_repeat = 2
texture = ExtResource("17_un5na")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="1" type="ParallaxLayer" parent="ParallaxBackgroundCorrompido"]
motion_scale = Vector2(1.2, 1.2)
motion_mirroring = Vector2(288, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackgroundCorrompido/1"]
texture_repeat = 2
texture = ExtResource("18_7mab7")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 576, 208)

[node name="Camera" parent="." instance=ExtResource("9_jo4av")]
position = Vector2(42, 97)
limit_top = 0
limit_right = 620

[node name="LevelEnd" parent="." instance=ExtResource("12_64es3")]
position = Vector2(636, 153)
next_level = "tropic"

[node name="CollisionShape2D" parent="LevelEnd" index="0"]
position = Vector2(-8, -43)
shape = SubResource("RectangleShape2D_kmspj")

[node name="EnemiesCorrompido" type="Node2D" parent="."]

[node name="Skeleton3" parent="EnemiesCorrompido" instance=ExtResource("13_kmspj")]
position = Vector2(292, 141)

[node name="Skeleton2" parent="EnemiesCorrompido" instance=ExtResource("13_kmspj")]
position = Vector2(151, 144)

[editable path="LevelEnd"]
